<resources>
    <string name="app_name">ArtMind</string>
    <string name="artMind">Art Mind</string>
    <string name="enter_prompt">Enter prompt</string>
    <string name="number_of_images_to_generate">Number of images to generate</string>
    <string name="choose_size_of_the_image">Choose size of the image</string>
    <string name="generate">Generate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_history">History</string>
</resources>