<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_main_coordinator_layout"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/artMind"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp" />
                    <ImageView
                        android:id="@+id/history"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/history"
                        app:layout_constraintTop_toTopOf="@id/app_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/app_title"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:contentDescription="@string/app_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>




        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:transitionGroup="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:clipToPadding="false"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/enter_prompt">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/prompt_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextField2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/filledTextField"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/number_of_images_to_generate">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/number_picker_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"

                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.slider.Slider
                            android:id="@+id/number_picker_slider"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:valueFrom="1"
                            android:valueTo="10" />
                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/filledTextField2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/generate"
                    android:layout_gravity="center_horizontal"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/generateButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerView"
                    app:layout_constraintTop_toBottomOf="@id/generateButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


<!--<com.google.android.material.textfield.TextInputLayout-->
<!--android:id="@+id/filledTextField3"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--app:layout_constraintTop_toBottomOf="@id/filledTextField2"-->
<!--android:layout_marginStart="@dimen/_20sdp"-->
<!--android:layout_marginTop="@dimen/_20sdp"-->
<!--android:layout_marginEnd="@dimen/_20sdp"-->
<!--android:orientation="vertical"-->
<!--android:hint="@string/choose_size_of_the_image">-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginBottom="@dimen/_15sdp"-->
<!--    android:textSize="@dimen/_15ssp"-->
<!--    android:text="@string/choose_size_of_the_image"/>-->
<!--<Spinner-->
<!--    android:id="@+id/imageSizeSpinner"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    />-->

<!--</com.google.android.material.textfield.TextInputLayout>-->